// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anything query fetches Author 1`] = `
Object {
  "anything": Object {
    "__typename": "Author",
    "books": Array [
      Object {
        "description": "Laborum cupiditate consequatur et voluptatem.",
        "favourite": true,
        "id": "Mi1Cb29r",
        "title": "Et",
      },
      Object {
        "description": "Aut consequatur incidunt blanditiis sunt.",
        "favourite": true,
        "id": "My1Cb29r",
        "title": "In Eos Quae",
      },
      Object {
        "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
        "favourite": true,
        "id": "MS1Cb29r",
        "title": "Suscipit Animi Qui Impedit",
      },
    ],
    "id": "MS1BdXRob3I=",
    "name": "Valentine Deckow",
  },
}
`;

exports[`anything query fetches Book 1`] = `
Object {
  "anything": Object {
    "__typename": "Book",
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "favourite": true,
    "id": "MS1Cb29r",
    "title": "Suscipit Animi Qui Impedit",
  },
}
`;

exports[`anything query fetches BookCopy 1`] = `
Object {
  "anything": Object {
    "__typename": "BookCopy",
    "book": Object {
      "description": "Consequatur et voluptatem nostrum cupiditate laborum in.",
      "favourite": false,
      "id": "MS1Cb29r",
      "title": "Sit Et Corporis Laborum",
    },
    "borrower": Object {
      "id": "MS1Vc2Vy",
      "name": "Moses Satterfield",
    },
    "id": "MS1Cb29rQ29weQ==",
    "owner": Object {
      "id": "Mi1Vc2Vy",
      "name": "Jackson Borer",
    },
  },
}
`;

exports[`anything query fetches User 1`] = `
Object {
  "anything": Object {
    "__typename": "User",
    "id": "MS1Vc2Vy",
    "name": "Moses Satterfield",
  },
}
`;

exports[`fetches with aliases 1`] = `
Object {
  "author": Object {
    "description": "Et voluptatem nostrum.",
    "headline": "Elliott Monahan IV",
    "id": "Mi1BdXRob3I=",
  },
  "something": Object {
    "description": "Voluptatem inventore ut quisquam fugiat itaque non alias.",
    "externalId": "MS1Cb29r",
    "headline": "Suscipit Animi Qui Impedit",
    "id": "MS1Cb29r",
  },
  "user": Object {
    "description": "Sint voluptatibus deserunt totam quae eos.",
    "headline": "Elaina Wiza III",
    "id": "MS1Vc2Vy",
  },
}
`;
